--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -53,6 +53,10 @@
     margin: auto;
 }
 
+.t_justify {
+    text-align: justify;
+}
+
 .btn {
     font-family: var(--font1);
     background-color: white;
@@ -91,6 +95,7 @@
 }
 
 .form_input_1 {
+    width: 38vw;
     margin-top: 0.5em;
     padding: 0.5em 2em;
     font-size: 1em;
@@ -100,14 +105,21 @@
 }
 
 .btn_1 {
-    margin-top: 0.5em;
+    width: 10vw;
+    margin-top: 1.5em;
     font-family: var(--font2);
     background-color: var(--main-bg-color);
     font-size: 1em;
-    padding: 0.4em 1em;
+    padding: 0.6em 1em;
     padding-top: 0.1em;
     border: 0.16em solid var(--main-bg-color);
     color: white;
     border-radius: 1.5em;
     cursor: pointer;
+}
+
+.btn_1:hover {
+    background-color: white;
+    color: var(--main-bg-color);
+    transition: all 0.3s ease-in-out;
 }
