--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -75,5 +75,6 @@ h2:hover {
 }
 
 .card_recent_post img:hover {
-    border: 0.02em solid var(--main-bg-color);
+    border: 0.1em solid var(--main-bg-color);
+    transition: all 0.15s ease-in-out;
 }
