--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -78,3 +78,21 @@ h2:hover {
     border: 0.1em solid var(--main-bg-color);
     transition: all 0.15s ease-in-out;
 }
+
+.card_comment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2.5em;
+}
+
+.card_comment textarea {
+    width: 80%;
+    margin-top: 0.5em;
+    padding: 0.5em 2em;
+    font-size: 1em;
+    font-family: var(--font2);
+    border: 0.1em solid var(--main-bg-color);
+    border-radius: 0.5em;
+}
