--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -48,7 +48,7 @@ h2:hover {
     align-items: center;
     justify-content: center;
     border: 0.1em solid rgb(209, 209, 209);
-    border-radius: 1.1em;
+    border-radius: 0.3em;
 }
 
 .card_about img {
@@ -66,16 +66,17 @@ h2:hover {
 }
 
 .card_recent_post img {
-    height: 15vh;
-    width: 10vw;
+    height: 17vh;
+    width: 12vw;
     border: 0.01em solid rgb(209, 209, 209);
-    border-radius: 0.8em;
+    border-radius: 0.3em;
     margin-top: 0.5em;
     cursor: pointer;
 }
 
 .card_recent_post img:hover {
-    border: 0.1em solid var(--main-bg-color);
+    border: 0.01em solid var(--main-bg-color);
+    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
     transition: all 0.15s ease-in-out;
 }
 
@@ -88,7 +89,7 @@ h2:hover {
 }
 
 .card_comment textarea {
-    width: 80%;
+    width: 70%;
     margin-top: 0.5em;
     padding: 0.5em 2em;
     font-size: 1em;
