--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -14,7 +14,7 @@
     border: 0.1em solid var(--main-bg-color);
     font-weight: bolder;
     padding: 0 0.5em;
-    border-radius: 1.5em;
+    border-radius: 0.3em;
 }
 
 
@@ -70,21 +70,22 @@
 
 .btn {
     font-family: var(--font1);
-    background-color: white;
+    background-color: var(--main-bg-color);
+    color: #ffffff;
     font-size: 0.9em;
+    font-weight: bolder;
     padding: 0 1em;
     padding-top: 0.1em;
-    border: 0.16em solid #000;
-    border-radius: 1.5em;
+    border: 0.12em solid var(--main-bg-color);
+    border-radius: 0.3em;
     cursor: pointer;
 }
 
 .btn:hover {
-    padding: 0 1.2em;
-    padding-top: 0.1em;
     transition: all 0.3s ease-in-out;
     border-color: var(--main-bg-color);
     color: var(--main-bg-color);
+    background-color: #ffffff;
     font-weight: bolder;
 }
 
@@ -93,16 +94,14 @@
     padding: 0.45em 1em;
     padding-bottom: 0.4em;
     text-align: center;
-    border: 0.17em solid black;
-    border-radius: 1em;
+    border: 0.12em solid black;
+    border-radius: 0.3em;
     margin: 0 1.4em;
 }
 
 .form_input:hover {
-    padding: 0.45em 1.3em;
-    padding-bottom: 0.4em;
     transition: all 0.3s ease-in-out;
-    border: 0.17em solid var(--main-bg-color);
+    border: 0.12em solid var(--main-bg-color);
 }
 
 .form_input_1 {
@@ -115,6 +114,10 @@
     border-radius: 0.5em;
 }
 
+.form_input_1:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
 .btn_1 {
     width: 10vw;
     margin-top: 1.5em;
@@ -122,10 +125,10 @@
     background-color: var(--main-bg-color);
     font-size: 1em;
     padding: 0.6em 1em;
-    padding-top: 0.1em;
+    padding-top: 0.2em;
     border: 0.16em solid var(--main-bg-color);
     color: white;
-    border-radius: 1.5em;
+    border-radius: 0.3em;
     cursor: pointer;
 }
 
