--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,8 +166,9 @@ hr {
 }
 
 .recent_elements:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease-in-out;
+    background-color: rgb(255, 234, 220);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .recent_elements_text {
@@ -192,31 +193,31 @@ hr {
 }
 
 .post_thumbnail {
+    display: flex;
     text-align: center;
     background: #fff;
     border-right: 0.1em solid;
     border-radius: 0.2em 0 0 0.2em;
 }
 
-.recent_elements img {
+.post_thumbnail img {
     height: 150px;
-    /* border: 0.01em solid var(--main-bg-color); */
-    /* border-right: 0.1em solid #000000; */
     border-radius: 0.2em 0 0 0.2em;
-    /* margin: 0.4em 1em 0.4em 0em; */
-    margin-right: 1em;
     cursor: pointer;
     background-color: #ffffff;
 }
 
+.no_search_jumbotron {
+    background: lightgrey;
+    padding: 0 0 1em 1em;
+}
 
-/* .recent_elements img:hover {
-    transition: all 0.3s ease-in-out;
-    border: 0.1em solid var(--main-bg-color);/
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-} */
+.no_search_jumbotron ol li {
+    margin-left: 2.4em;
+}
 
 .sticky_foot {
+    margin-top: 3em;
     min-height: 8vh;
     background-color: #2c0a8a;
     display: flex;
@@ -245,11 +246,11 @@ hr {
     text-decoration: none;
     color: white;
     font-size: 0.8em;
+    font-weight: bolder;
     font-family: var(--font1);
 }
 
 .sticky_foot ul li a:hover {
     color: var(--main-bg-color);
-    font-weight: bolder;
     transition: all 0.15s ease-in-out;
 }
